cabal-version:      3.0
name:               network-light
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Robert Krook
maintainer:         rewbert93@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Network.Network
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

Test-Suite test-sockaddr-storable
    type: exitcode-stdio-1.0
    Default-language: Haskell2010
    hs-source-dirs: test/Network
    main-is: SockAddr.hs
    build-depends: base, network-light, QuickCheck